assets/css/style.css
/* add Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Fira+Mono:wght@400;500;700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');

/* wildcard selector to override browser defaults */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* generic style */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: black;
    font-family: 'Roboto Mono', sans-serif;

} 

/* header element */
header {
    background-color: #F6F188;
    padding: 10px 10px;
    position: fixed;
    width: 100%;
    z-index: 10;
    box-shadow: 0 2px 4px #000000;
    justify-content: space-between;
    align-items: center;
    display: flex;
}

header h1 {
    font-family: 'Fira Mono', sans-serif;
    max-width: 200px;
}

#logo {
    text-decoration: none;
    color: #9A0431;
}

/*styling for nav bar options */
#menu {
    font-size: 110%;
    font-family: 'Cousine', sans-serif;
    letter-spacing: 2px;
    list-style-type: none;
    line-height: 35px;
}

#menu>li>a {
    text-decoration: none;
    color: #9A0431
}

/* active-page class tells user where they are in the website when looking at nav bar */
.active-page {
    border-bottom: 1px solid #9A0431;
}

nav {
    position: absolute;
    background-color: #F6F188;
    width: 100%;
    box-shadow: 0 2px 2px #000000;
    left: 0;
    padding: 0 1rem;
    display: none;
    top: 100%;

}

/* nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
    align-items: center;
}

.nav-toggle-label {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    font-size: 300%;
    vertical-align: -100%;

}

/* main element */

main {
    /* flex set to keep footer down at bottom of page */
    flex-grow: 1;
    flex-shrink: 0;
    flex-basis: auto;
    margin-top: 90px;

}

/* hero section on index.html */
#hero {
    width: 100%;
    height: 75vh;
    background: url(../images/index-hero-image.jpg) no-repeat center center/cover;
    position: relative;
    margin-bottom: 2em;
}

#text-on-hero-image>h2 {
    padding-top: 20px;
    font-family: 'Cousine', sans-serif;
    letter-spacing: 2px;
    color: #FFFFFF;
}

#text-on-hero-image {
    background-color: rgba(0, 115, 96, 0.5);
    font-size: 140%;
    position: absolute;
    bottom: 30px;
    width: 80%;
    padding-left: 20px;
}

#about-us {
    max-width: 80vw;
    margin: 0 auto;
    margin-bottom: 3em;
}

#about-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#about-us h2 {
    background-color: #F6F188;
    color: #9A0431;
    text-align: center;
    padding: 10px;
    margin: 0.5em auto;
    width: fit-content;

}

#about-us img {
    max-width: 300px;
    align-self: center;
    padding: 5px;
    margin: 5px;
}

#about-us p {
    margin: 0 auto 1em;
    text-align: center;
}

.contact-call-to-action a {
    font-size: 140%;
    font-family: 'Cousine';
    text-decoration: none;
    background-color: #F6F188;
    color: #9A0431;
    padding: 5px;
}

.contact-call-to-action {
    text-align: center;
    align-self: center;
    margin: 1em auto;
    max-width: 200px;
}



/* industry insight section */
#industry {
    max-width: 80vw;
    margin: 0 auto;
    margin-bottom: 3em;

}

#industry h2 {
    background-color: #F6F188;
    color: #9A0431;
    text-align: center;
    padding: 10px;
    margin: 0.5em auto;
    width: fit-content;
}

#industry-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#industry img {
    max-width: 300px;
    align-self: center;
    padding: 5px;
    margin: 5px;
}

#industry p {
    margin: 0 auto 1em;
    text-align: center;
}

#industry-call-to-action a {
    font-size: 140%;
    font-family: 'Cousine';
    text-decoration: none;
    background-color: #F6F188;
    color: #9A0431;
    padding: 5px;
    ;
}

#industry-call-to-action {
    text-align: center;
    align-self: center;
    margin: 1em auto;
    max-width: 200px;
}

/*testimonials section*/

#testimonials {
    max-width: 80vw;
    margin: 0 auto;
    margin-bottom: 3em;
}

#testimonials>h2 {
    background-color: #F6F188;
    color: #9A0431;
    text-align: center;
    padding: 10px;
    margin: 0.5em auto;
    width: fit-content;
}

#testimonials-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    max-width: 80vw;
}

.testimonial-box {
    background-color: rgba(0, 115, 96, 0.8);
    margin: 1em auto;
    padding: 10px;
    border-radius: 10%;
}

.testimonial-box h3 {
    align-self: center;
    text-align: center;
    color: #FFFFFF;
    font-family: "Fira Mono"sans-serif;
    padding: 5px;

}

.testimonial-box img {
    display: block;
    align-self: center;
    margin: auto;
    max-width: 150px;
    border-radius: 50%;
    padding: 5px;

}

.testimonial-box h4 {
    color: #FFFFFF;
    align-self: center;
    font-family: "Cousine";
    text-align: center;
    padding: 5px;

}

.testimonial-box p {
    align-self: center;
    font-style: italic;
    color: #FFFFFF;
    text-align: center;
    padding: 5px;
}

/* footer element */
footer {
    background-color: #9A0431;
    color: #F6F188;
}

#contact-details {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 1em;
}

#contact-text {
    text-align: center;
}

#social-media-links {
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    text-align: center;
    list-style-type: none;

}

#social-media-links a i {
    color: #F6F188;
    font-size: 170%;
    padding: 10px 10px;
}

#legal-copyright {
    text-align: center;
    margin-bottom: 1em;
}

#baby-jay-easter-egg img {
    max-height: 40px;
    max-width: 40px;
    margin-bottom: 2px;
}
/* ... */

